@@ -21,11 +21,14 @@ from pyscf.gto.moleintor import libcgto
 #
 # gxyz is the index for Gvbase
 def ft_aopair(mol, Gv, shls_slice=None, aosym='s1', b=numpy.eye(3),
-              gxyz=None, Gvbase=None, buf=None, intor='GTO_ft_ovlp_sph',
+              gxyz=None, Gvbase=None, buf=None, intor='GTO_ft_ovlp',
               comp=1, verbose=None):
     r''' FT transform AO pair
     \int i(r) j(r) exp(-ikr) dr^3
     '''
+
+    intor = cell._add_suffix(intor)
+
     if shls_slice is None:
         shls_slice = (0, mol.nbas, 0, mol.nbas)
     nGv = Gv.shape[0]
